<resources>
    <string name="app_name">TimeKeeper</string>
    <string name="txt_button_minus">-</string>
    <string name="reset_button_text">Reset</string>
    <string name="plus_button_text">+</string>
    <string name="minus_button_text">-</string>
    <string name="count_text">PH</string>
    <string name="start_time_countdown">0</string>
    <string name="lap_1_text">Lap 1:</string>
    <string name="lap_2_text">Lap 2:</string>
    <string name="lap_3_text">Lap 3:</string>
    <string name="lap_4_text">Lap 4:</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="reset_text">Reset</string>
    <string name="initialtime_stopwatch_text">00:00:00</string>
    <string name="lap_text">Lap</string>
    <string name="time_keeper_app_title">Time Keeper</string>
</resources>