<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_click_counter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:padding="25dp"
    tools:context=".ClickCounter">

    <TextView
        android:id="@+id/count_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/minus_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginEnd="3dp"
            android:background="@drawable/click_button"
            android:backgroundTint="@color/minus_color"
            android:gravity="center"
            android:text="@string/minus_button_text"
            android:textColor="@color/white"
            android:textSize="50sp" />
        <Button
            android:id="@+id/plus_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="3dp"
            android:background="@drawable/click_button"
            android:backgroundTint="@color/plus_color"
            android:gravity="center"
            android:text="@string/plus_button_text"
            android:textColor="@color/white"
            android:textSize="50sp" />
        <Button
            android:id="@+id/reset_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_row="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="6dp"
            android:background="@drawable/click_button"
            android:backgroundTint="@color/reset_color"
            android:gravity="center"
            android:text="@string/reset_button_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>